fix: model_dump error and replace id type int by str
